--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -51,6 +51,8 @@
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-dev-utils": "^5.0.1",
+    "react-hot-loader": "^4.3.3",
+    "react-snapshot": "^1.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
