--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -30,6 +30,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -42,9 +43,11 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "foundation-sites": "^6.5.0-rc.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.9.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -54,7 +57,10 @@
     "react-hot-loader": "^4.3.3",
     "react-snapshot": "^1.3.0",
     "resolve": "1.6.0",
+    "sass-loader": "^7.0.3",
     "style-loader": "0.19.0",
+    "svg-inline-loader": "^0.8.0",
+    "svg-inline-react": "^3.1.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
