--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -30,6 +30,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.6",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
