Rename to puding

--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cofab-react-scripts",
+  "name": "puding",
   "version": "1.1.16",
   "description": "Configuration and scripts for Create Cofab App.",
   "repository": "cofablab/create-cofab-app",
