--- a/packages/react-scripts/template/public/__admin/config.yaml
+++ b/packages/react-scripts/template/public/__admin/config.yaml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: cofablab/create-cofab-app # Change this to your repo
+  repo: username/repo # Change this to your repo
   branch: master
 
 media_folder: src/assets/uploads
