--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -49,8 +49,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "multiplytix": "^0.0.4",
-    "multiplytix-react": "^0.0.1",
+    "multicat-react": "^0.0.13",
     "node-sass": "^4.9.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
